# TIMScript

./: Bytecode.h  BytecodePrinter.cpp  BytecodePrinter.h  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  README.md  TIMScript.h  TSEngine.cpp  TSEngine.h  Utils.cpp  Utils.h  main.cpp
Compiler/: CastUtils.cpp  CastUtils.h  CompilationContext.cpp  CompilationContext.h  CompilationExceptions.cpp  CompilationExceptions.h  Compiler.cpp  Compiler.h  Scope.cpp  Scope.h  UserData.h
Compiler/Nodes/: AbstractNode.cpp  AbstractNode.h  ArrayNodes.cpp  ArrayNodes.h  AssignableNode.cpp  AssignableNode.h  AsyncNode.cpp  AsyncNode.h  BeginNode.cpp  BeginNode.h  BinaryOperationNodes.cpp  BinaryOperationNodes.h  BlockNode.cpp  BlockNode.h  CallNode.cpp  CallNode.h  (+42 more)
Interpreter/: DebugInfos.cpp  DebugInfos.h  Debugger.cpp  Debugger.h  ExceptionTable.cpp  ExceptionTable.h  GC.cpp  GC.h  Interpreter.cpp  Interpreter.h  InterpreterDefines.h  Procedure.cpp  Procedure.h  TSProgram.cpp  TSProgram.h
Libs/: TSTD.cpp  TSTD.h  TSTDArray.cpp  TSTDArray.h  TSTDClock.cpp  TSTDClock.h  TSTDFile.cpp  TSTDFile.h  TSTDIterable.cpp  TSTDIterable.h  TSTDMap.cpp  TSTDMap.h  TSTDMath.cpp  TSTDMath.h  TSTDPrimitive.cpp  TSTDPrimitive.h  TSTDString.cpp  TSTDString.h  TSTDThread.cpp  TSTDThread.h  TSTDVector.cpp  TSTDVector.h
Tokenizer/: Tokenizer.cpp  Tokenizer.h
Tools/: FunctionBuilder.cpp  FunctionBuilder.h
Types/: Array.cpp  Array.h  Class.cpp  Class.h  Function.cpp  Function.h  Instance.cpp  Instance.h  NativeData.cpp  NativeData.h  Object.cpp  Object.h  TSType.cpp  TSType.h  Tuple.cpp  Tuple.h
(+18 files in other folders)
